src/test/deca/context/valid/created/testCast/intFloat.deca
// Description :
//    Faire un cast de float --> int
//
// Résultats :
//   OK

class A{
    float x = 1.0;
    int y = (int) (x);
}